--- a/pom.xml
+++ b/pom.xml
@@ -153,9 +153,9 @@
             <version>${spring.version}</version>
         </dependency>
     <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.13</version>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>1.8.0.10</version>
             <classifier/>
         </dependency>
         <dependency>
