--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
     </pluginRepositories>
     <dependencies>
         <!-- General dependencies for standard applications -->
+        
+        <dependency>
+    		<groupId>commons-io</groupId>
+   			 <artifactId>commons-io</artifactId>
+    		<version>2.0.1</version>
+		</dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
